--- a/index.html
+++ b/index.html
@@ -25,13 +25,20 @@
              <ul class="info-list">
                  <li class="site-item-one">
                      <a class="item-one" href="mailto:info@devstudio.com" class="link-info">
-                         <svg class="icon-nav">
+                         <svg class="icon-nav-one">
                              <use href="./images/icons.svg#icon-envelope"></use>
                          </svg>
-                         <span>info@devstudio.com</span>
+                         <span class="blue-logo">info@devstudio.com</span>
                      </a>
                  </li>
-                 <li class="site-item-one-info"><a class="item-one-info" href="tel:+380961111111" class="link-info">+38 096 111 11 11</a></li>
+                 <li class="site-item-one-info">
+                     <a class="item-one-info" href="tel:+380961111111" class="link-info">
+                         <svg class="icon-nav-two">
+                             <use href="./images/icons.svg#icon-Vector"></use>
+                         </svg>
+                         <span> +38 096 111 11 11</span>  
+                     </a>
+                 </li>
              </ul>
          </div>
      </header>
@@ -47,18 +54,30 @@
                  <h2 hidden class="visually-hidden">Наші переваги</h2>
                  <ul class="advantages-list">
                      <li class="advantages-list-item">
+                         <svg class="features-icon">
+                             <use href="./images/icons.svg#icon-Group"></use>
+                         </svg>
                          <h3 class="basic-anchors"> УВАГА ДО ДЕТАЛЕЙ </h3>
                              <p class="word-meaning"> Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. </p>
                      </li>
                      <li class="advantages-list-item">
+                         <svg class="features-icon">
+                             <use href="./images/icons.svg#icon-clock-1"></use>
+                         </svg>
                          <h3 class="basic-anchors"> ПУНКТУАЛЬНІСТЬ </h3>
                              <p class="word-meaning"> Завдання організації, особливо рамки і місце навчання кадрів тягне у себе. </p>
                      </li>
                      <li class="advantages-list-item">
+                         <svg class="features-icon">
+                             <use href="./images/icons.svg#icon-diagram-1"></use>
+                         </svg>
                          <h3 class="basic-anchors"> ПЛАНУВАННЯ </h3>
                              <p class="word-meaning"> Так само консультація з широким активом значною мірою зумовлює. </p>
                      </li>
                      <li class="advantages-list-item">
+                         <svg class="features-icon">
+                             <use href="./images/icons.svg#icon-astronaut"></use>
+                         </svg>
                          <h3 class="basic-anchors"> СУЧАСНІ ТЕХНОЛОГІЇ </h3>
                              <p class="word-meaning"> Значимість цих проблем настільки очевидна, що реалізація планових завдань. </p>
                      </li>
@@ -84,6 +103,36 @@
                          <div class="team-card-wrapper">
                              <h3 class="container-text-main"> Ігор Дем'яненко </h3>
                                  <p class="container-text-other-row"> Product Designer </p>
+                         <ul class="social-link-list">
+                             <li class="social-network">
+                                 <a href="" class="social-item">
+                                     <svg class="icon-social-link" width="20" height="20">
+                                         <use href="./images/icons.svg#icon-instagram"></use>
+                                     </svg>
+                                 </a>
+                             </li>
+                             <li class="social-network">
+                                 <a href="" class="social-item">
+                                     <svg class="icon-social-link" width="20" height="20">
+                                         <use href="./images/icons.svg#icon-twitter"></use>
+                                     </svg>
+                                 </a>
+                             </li>
+                             <li class="social-network">
+                                 <a href="" class="social-item">
+                                     <svg class="icon-social-link" width="20" height="20">
+                                         <use href="./images/icons.svg#icon-facebook"></use>
+                                     </svg>
+                                 </a>
+                             </li>
+                             <li class="social-network">
+                                 <a href="" class="social-item">
+                                     <svg class="icon-social-link" width="20" height="20">
+                                         <use href="./images/icons.svg#icon-linkedin2"></use>
+                                     </svg>
+                                 </a>
+                             </li>
+                         </ul>
                          </div>
                      </li>
                      <li class="team-list-item">
@@ -91,6 +140,36 @@
                          <div class="team-card-wrapper">
                              <h3 class="container-text-main"> Ольга Рєпіна </h3>
                                  <p class="container-text-other-row"> Frontend Developer </p>
+                         <ul class="social-link-list">
+                             <li class="social-network">
+                                 <a href="" class="social-item">
+                                     <svg class="icon-social-link" width="20" height="20">
+                                         <use href="./images/icons.svg#icon-instagram"></use>
+                                     </svg>
+                                 </a>
+                             </li>
+                             <li class="social-network">
+                                 <a href="" class="social-item">
+                                     <svg class="icon-social-link" width="20" height="20">
+                                         <use href="./images/icons.svg#icon-twitter"></use>
+                                     </svg>
+                                 </a>
+                             </li>
+                             <li class="social-network">
+                                 <a href="" class="social-item">
+                                     <svg class="icon-social-link" width="20" height="20">
+                                         <use href="./images/icons.svg#icon-facebook"></use>
+                                     </svg>
+                                 </a>
+                             </li>
+                             <li class="social-network">
+                                 <a href="" class="social-item">
+                                     <svg class="icon-social-link" width="20" height="20">
+                                         <use href="./images/icons.svg#icon-linkedin2"></use>
+                                     </svg>
+                                 </a>
+                                 </li>
+                             </ul>
                          </div>
                      </li>
                      <li class="team-list-item">
@@ -98,29 +177,172 @@
                          <div class="team-card-wrapper">
                              <h3 class="container-text-main"> Микола Тарасов </h3>
                                  <p class="container-text-other-row"> Marketing </p>
-                         </div>
-                     </li>
+                             <ul class="social-link-list">
+                                     <li class="social-network">
+                                         <a href="" class="social-item">
+                                             <svg class="icon-social-link" width="20" height="20">
+                                                 <use href="./images/icons.svg#icon-instagram"></use>
+                                             </svg>
+                                         </a>
+                                     </li>
+                                     <li class="social-network">
+                                         <a href="" class="social-item">
+                                             <svg class="icon-social-link" width="20" height="20">
+                                                 <use href="./images/icons.svg#icon-twitter"></use>
+                                             </svg>
+                                         </a>
+                                     </li>
+                                     <li class="social-network">
+                                         <a href="" class="social-item">
+                                             <svg class="icon-social-link" width="20" height="20">
+                                                 <use href="./images/icons.svg#icon-facebook"></use>
+                                             </svg>
+                                         </a>
+                                     </li>
+                                     <li class="social-network">
+                                         <a href="" class="social-item">
+                                             <svg class="icon-social-link" width="20" height="20">
+                                                 <use href="./images/icons.svg#icon-linkedin2"></use>
+                                             </svg>
+                                         </a>
+                                     </li>
+                                 </ul>
+                             </div>
                      <li class="team-list-item">
                          <img src="./images/photo4.jpg" alt="Михайло Єрмаков" width="270"/>
                          <div class="team-card-wrapper">
                              <h3 class="container-text-main"> Михайло Єрмаков </h3>
                                  <p class="container-text-other-row"> UI Designer </p>
+                             <ul class="social-link-list">
+                                 <li class="social-network">
+                                     <a href="" class="social-item">
+                                         <svg class="icon-social-link" width="20" height="20">
+                                             <use href="./images/icons.svg#icon-instagram"></use>
+                                         </svg>
+                                     </a>
+                                 </li>
+                                 <li class="social-network">
+                                     <a href="" class="social-item">
+                                         <svg class="icon-social-link" width="20" height="20">
+                                             <use href="./images/icons.svg#icon-twitter"></use>
+                                         </svg>
+                                     </a>
+                                 </li>
+                                 <li class="social-network">
+                                     <a href="" class="social-item">
+                                         <svg class="icon-social-link" width="20" height="20">
+                                             <use href="./images/icons.svg#icon-facebook"></use>
+                                         </svg>
+                                     </a>
+                                 </li>
+                                 <li class="social-network">
+                                     <a href="" class="social-item">
+                                         <svg class="icon-social-link" width="20" height="20">
+                                             <use href="./images/icons.svg#icon-linkedin2"></use>
+                                         </svg>
+                                     </a>
+                                 </li>
+                             </ul>
                          </div>
                      </li>
                  </ul>
              </div>
         </section>
+        <section class="section">
+             <div class="container">
+                 <h2 class="services-text-title">Постійні клієнти</h2>
+                 <ul class="client-list">
+                     <li class="social-network">
+                         <a href="" class="client-link" aria-label="Клієнт-1">
+                             <svg class="icon-client">
+                                 <use href="./images/icons.svg#icon-client1"></use>
+                             </svg>
+                         </a>
+                     </li>
+                     <li class="social-network">
+                         <a href="" class="client-link" aria-label="Клієнт-2">
+                             <svg class="icon-client">
+                                 <use href="./images/icons.svg#icon-client2"></use>
+                             </svg>
+                         </a>
+                     </li>
+                     <li class="social-network">
+                         <a href="" class="client-link" aria-label="Клієнт-3">
+                             <svg class="icon-client">
+                                 <use href="./images/icons.svg#icon-client3"></use>
+                             </svg>
+                         </a>
+                     </li>
+                     <li class="social-network">
+                         <a href="" class="client-link" aria-label="Клієнт-4">
+                             <svg class="icon-client">
+                                 <use href="./images/icons.svg#icon-client4"></use>
+                             </svg>
+                         </a>
+                     </li>
+                     <li class="social-network">
+                         <a href="" class="client-link" aria-label="Клієнт-5">
+                             <svg class="icon-client">
+                                 <use href="./images/icons.svg#icon-client5"></use>
+                             </svg>
+                         </a>
+                     </li>
+                     <li class="social-network">
+                         <a href="" class="client-link" aria-label="Клієнт-6">
+                             <svg class="icon-client">
+                                 <use href="./images/icons.svg#icon-client6"></use>
+                             </svg>
+                         </a>
+                     </li>
+                 </ul>
+             </div>
+         </section>
      </main>
      <footer class="footer">
          <div class="container footer-container">
-             <a href="./index.html" class="logo-footer"><span class="blue-logo">Web</span>Studio </a>
-             <address class="address">
-                 <ul class="address-item">
-                     <li class="item-footer"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="list-footer">м. Київ, пр-т Лесі Украінки, 26</a></li>
-                     <li class="item-footer-one"><a href="mailto:info@devstudio.com" class="list-footer-one">info@devstudio.com</a></li>
-                     <li class="item-footer-two"><a href="tel:+380961111111" class="list-footer-two">+38 096 111 11 11</a></li>
+             <div>
+                 <a href="./index.html" class="logo-footer"><span class="blue-logo">Web</span>Studio </a>
+                 <address class="address">
+                     <ul class="address-item">
+                         <li class="item-footer"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="list-footer">м. Київ, пр-т Лесі Украінки, 26</a></li>
+                         <li class="item-footer-one"><a href="mailto:info@devstudio.com" class="list-footer-one">info@devstudio.com</a></li>
+                         <li class="item-footer-two"><a href="tel:+380961111111" class="list-footer-two">+38 096 111 11 11</a></li>
+                     </ul>
+                 </address>  
+             </div>
+             <div class="social-container">
+                 <b class="footer-offer">приєднуйтесь</b>
+                 <ul class="footer-soclink">
+                     <li class="social-network">
+                         <a class="social-link" href="" aria-label="Instagram">
+                             <svg class="footer-social-link" width="20" height="20">
+                                 <use href="./images/icons.svg#icon-instagram"></use>
+                             </svg>
+                         </a>
+                     </li>
+                     <li class="social-network">
+                         <a href="" aria-label="Twitter" class="social-link">
+                             <svg class="footer-social-link" width="20" height="20">
+                                 <use href="./images/icons.svg#icon-twitter"></use>
+                             </svg>
+                         </a>
+                     </li>
+                     <li class="social-network">
+                         <a href="" aria-label="Facebook" class="social-link">
+                             <svg class="footer-social-link" width="20" height="20">
+                                 <use href="./images/icons.svg#icon-facebook"></use>
+                             </svg>
+                         </a>
+                     </li>
+                     <li class="social-network">
+                         <a href="" aria-label="LinkedIn" class="social-link-last">
+                             <svg class="footer-social-link" width="20" height="20">
+                                 <use href="./images/icons.svg#icon-linkedin2"></use>
+                             </svg>
+                         </a>
+                     </li>
                  </ul>
-             </address>  
+             </div>
          </div>
     </footer>
 </body>
