--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,22 @@
                  </ul>
              </nav>
              <ul class="info-list">
-             <li class="site-item-one"><a class="item-one" href="mailto:info@devstudio.com" class="link-info">info@devstudio.com</a></li>
-             <li class="site-item-one-info"><a class="item-one-info" href="tel:+380961111111" class="link-info">+38 096 111 11 11</a></li>
+                 <li class="site-item-one">
+                     <a class="item-one" href="mailto:info@devstudio.com" class="link-info">
+                         <svg class="icon-portfolio-one">
+                             <use href="./images/icons.svg#icon-envelope"></use>
+                         </svg>
+                     <span>info@devstudio.com</span>
+                     </a>
+                 </li>
+                 <li class="site-item-one-info">
+                     <a class="item-one-info" href="tel:+380961111111" class="link-info">
+                         <svg class="icon-nav-two">
+                             <use href="./images/icons.svg#icon-Vector"></use>
+                         </svg>
+                     <span> +38 096 111 11 11</span>  
+                     </a>
+                 </li>
              </ul>
          </div>    
      </header>
@@ -126,15 +140,50 @@
          </section>
      </main>
      <footer class="footer">
-         <div class="container footer-container">
-             <a href="./index.html" class="logo-footer"><span class="blue-logo"> Web</span>Studio </a>
-             <address class="address">
-                 <ul class="address-item">
-                     <li class="item-footer"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="list-footer">м. Київ, пр-т Лесі Украінки, 26</a></li>
-                     <li class="item-footer-one"><a href="mailto:info@example.com" class="list-footer-one">info@example.com</a></li>
-                     <li class="item-footer-two"><a href="tel:+380961111111" class="list-footer-two">+38 096 111 11 11</a></li>
+        <div class="container footer-container">
+             <div>
+                 <a href="./index.html" class="logo-footer"><span class="blue-logo">Web</span>Studio </a>
+                 <address class="address">
+                     <ul class="address-item">
+                         <li class="item-footer"><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="list-footer">м. Київ, пр-т Лесі Украінки, 26</a></li>
+                         <li class="item-footer-one"><a href="mailto:info@devstudio.com" class="list-footer-one">info@devstudio.com</a></li>
+                         <li class="item-footer-two"><a href="tel:+380961111111" class="list-footer-two">+38 096 111 11 11</a></li>
+                     </ul>
+                 </address>  
+             </div>
+             <div class="social-container">
+                 <b class="footer-offer">приєднуйтесь</b>
+                 <ul class="footer-soclink">
+                     <li class="social-network">
+                         <a class="social-link" href="" aria-label="Instagram">
+                             <svg class="footer-social-link" width="20" height="20">
+                                 <use href="./images/icons.svg#icon-instagram"></use>
+                             </svg>
+                         </a>
+                     </li>
+                     <li class="social-network">
+                         <a href="" aria-label="Twitter" class="social-link">
+                             <svg class="footer-social-link" width="20" height="20">
+                                 <use href="./images/icons.svg#icon-twitter"></use>
+                             </svg>
+                         </a>
+                     </li>
+                     <li class="social-network">
+                         <a href="" aria-label="Facebook" class="social-link">
+                             <svg class="footer-social-link" width="20" height="20">
+                                 <use href="./images/icons.svg#icon-facebook"></use>
+                             </svg>
+                         </a>
+                     </li>
+                     <li class="social-network">
+                         <a href="" aria-label="LinkedIn" class="social-link-last">
+                             <svg class="footer-social-link" width="20" height="20">
+                                 <use href="./images/icons.svg#icon-linkedin2"></use>
+                             </svg>
+                         </a>
+                     </li>
                  </ul>
-             </address>  
+             </div>
          </div>
      </footer>
  </body>
