--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                          <svg class="icon-nav-one">
                              <use href="./images/icons.svg#icon-envelope"></use>
                          </svg>
-                         <span class="blue-logo">info@devstudio.com</span>
+                         <span>info@devstudio.com</span>
                      </a>
                  </li>
                  <li class="site-item-one-info">
@@ -43,8 +43,8 @@
          </div>
      </header>
      <main class="main">
-         <section class="main-container">
-             <div class="hero">
+         <section class="main-container hero">
+             <div class="container">
                  <h1 class="main-text"> Ефективні рішення для вашого бізнесу </h1>
                  <button type="button" class="main-button">Замовити послугу</button>
              </div>    
@@ -54,32 +54,40 @@
                  <h2 hidden class="visually-hidden">Наші переваги</h2>
                  <ul class="advantages-list">
                      <li class="advantages-list-item">
-                         <svg class="features-icon">
-                             <use href="./images/icons.svg#icon-Group"></use>
-                         </svg>
-                         <h3 class="basic-anchors"> УВАГА ДО ДЕТАЛЕЙ </h3>
-                             <p class="word-meaning"> Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. </p>
+                         <div class="features-icons">
+                             <svg width="70" height="70">
+                                 <use class="features-icon" href="./images/icons.svg#icon-Group"></use>
+                             </svg>
+                         </div>
+                             <h3 class="basic-anchors"> УВАГА ДО ДЕТАЛЕЙ </h3>
+                                 <p class="word-meaning"> Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. </p>
                      </li>
                      <li class="advantages-list-item">
-                         <svg class="features-icon">
-                             <use href="./images/icons.svg#icon-clock-1"></use>
-                         </svg>
+                         <div class="features-icons">
+                             <svg width="70" height="70">
+                                 <use class="features-icon" href="./images/icons.svg#icon-clock-1"></use>
+                             </svg>
+                         </div>
                          <h3 class="basic-anchors"> ПУНКТУАЛЬНІСТЬ </h3>
                              <p class="word-meaning"> Завдання організації, особливо рамки і місце навчання кадрів тягне у себе. </p>
                      </li>
                      <li class="advantages-list-item">
-                         <svg class="features-icon">
-                             <use href="./images/icons.svg#icon-diagram-1"></use>
-                         </svg>
+                         <div class="features-icons">
+                             <svg width="70" height="70">
+                                 <use class="features-icon" href="./images/icons.svg#icon-diagram-1"></use>
+                             </svg>
+                         </div>
                          <h3 class="basic-anchors"> ПЛАНУВАННЯ </h3>
                              <p class="word-meaning"> Так само консультація з широким активом значною мірою зумовлює. </p>
                      </li>
                      <li class="advantages-list-item">
-                         <svg class="features-icon">
-                             <use href="./images/icons.svg#icon-astronaut"></use>
-                         </svg>
-                         <h3 class="basic-anchors"> СУЧАСНІ ТЕХНОЛОГІЇ </h3>
-                             <p class="word-meaning"> Значимість цих проблем настільки очевидна, що реалізація планових завдань. </p>
+                         <div class="features-icons">
+                             <svg width="70" height="70">
+                                 <use class="features-icon" href="./images/icons.svg#icon-astronaut"></use>
+                             </svg>
+                         </div>
+                             <h3 class="basic-anchors"> СУЧАСНІ ТЕХНОЛОГІЇ </h3>
+                                 <p class="word-meaning"> Значимість цих проблем настільки очевидна, що реалізація планових завдань. </p>
                      </li>
                  </ul>
              </div>
@@ -252,42 +260,42 @@
              <div class="container">
                  <h2 class="services-text-title">Постійні клієнти</h2>
                  <ul class="client-list">
-                     <li class="social-network">
+                     <li class="social-network-client">
                          <a href="" class="client-link" aria-label="Клієнт-1">
                              <svg class="icon-client">
                                  <use href="./images/icons.svg#icon-client1"></use>
                              </svg>
                          </a>
                      </li>
-                     <li class="social-network">
+                     <li class="social-network-client">
                          <a href="" class="client-link" aria-label="Клієнт-2">
                              <svg class="icon-client">
                                  <use href="./images/icons.svg#icon-client2"></use>
                              </svg>
                          </a>
                      </li>
-                     <li class="social-network">
+                     <li class="social-network-client">
                          <a href="" class="client-link" aria-label="Клієнт-3">
                              <svg class="icon-client">
                                  <use href="./images/icons.svg#icon-client3"></use>
                              </svg>
                          </a>
                      </li>
-                     <li class="social-network">
+                     <li class="social-network-client">
                          <a href="" class="client-link" aria-label="Клієнт-4">
                              <svg class="icon-client">
                                  <use href="./images/icons.svg#icon-client4"></use>
                              </svg>
                          </a>
                      </li>
-                     <li class="social-network">
+                     <li class="social-network-client">
                          <a href="" class="client-link" aria-label="Клієнт-5">
                              <svg class="icon-client">
                                  <use href="./images/icons.svg#icon-client5"></use>
                              </svg>
                          </a>
                      </li>
-                     <li class="social-network">
+                     <li class="social-network-client">
                          <a href="" class="client-link" aria-label="Клієнт-6">
                              <svg class="icon-client">
                                  <use href="./images/icons.svg#icon-client6"></use>
@@ -313,29 +321,29 @@
              <div class="social-container">
                  <b class="footer-offer">приєднуйтесь</b>
                  <ul class="footer-soclink">
-                     <li class="social-network">
+                     <li class="social-network-footer">
                          <a class="social-link" href="" aria-label="Instagram">
                              <svg class="footer-social-link" width="20" height="20">
                                  <use href="./images/icons.svg#icon-instagram"></use>
                              </svg>
                          </a>
                      </li>
-                     <li class="social-network">
+                     <li class="social-network-footer">
                          <a href="" aria-label="Twitter" class="social-link">
                              <svg class="footer-social-link" width="20" height="20">
                                  <use href="./images/icons.svg#icon-twitter"></use>
                              </svg>
                          </a>
                      </li>
-                     <li class="social-network">
+                     <li class="social-network-footer">
                          <a href="" aria-label="Facebook" class="social-link">
                              <svg class="footer-social-link" width="20" height="20">
                                  <use href="./images/icons.svg#icon-facebook"></use>
                              </svg>
                          </a>
                      </li>
-                     <li class="social-network">
-                         <a href="" aria-label="LinkedIn" class="social-link-last">
+                     <li class="social-network-footer">
+                         <a href="" aria-label="LinkedIn" class="social-link">
                              <svg class="footer-social-link" width="20" height="20">
                                  <use href="./images/icons.svg#icon-linkedin2"></use>
                              </svg>
