--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
              <ul class="info-list">
                  <li class="site-item-one">
                      <a class="item-one" href="mailto:info@devstudio.com" class="link-info">
-                         <svg class="icon-portfolio-one">
+                        <svg class="icon-nav-one">
                              <use href="./images/icons.svg#icon-envelope"></use>
                          </svg>
                      <span>info@devstudio.com</span>
@@ -56,7 +56,7 @@
                  <ul class="portfolio-cards">
                      <li class="portfolio-card">
                          <a href="#" class="link-portfolio">
-                             <img src="./images/photoportfol1.jpg" alt="фото технокряку" width="370"/>
+                                 <img src="./images/photoportfol1.jpg" alt="фото технокряку" width="370"/>
                              <div class="portfolio-card-wrapper">
                                  <h2 class="portfolio-basic-anchors"> Технокряк </h2>
                                      <p class="portfolio-word-meaning"> Веб-сайт </p>
@@ -65,7 +65,7 @@
                      </li>
                      <li class="portfolio-card">
                           <a href="#" class="link-portfolio">
-                             <img src="./images/photoportfol2.jpg"  alt="фото постеру баскетболу" width="370"/>
+                             <img src="./images/photoportfol2.jpg" class="img-portfolio" alt="фото постеру баскетболу" width="370"/>
                              <div class="portfolio-card-wrapper">
                                  <h2 class="portfolio-basic-anchors"> Постер New Orlean vs Golden Star </h2>
                                      <p class="portfolio-word-meaning"> Дизайн </p>
@@ -154,29 +154,29 @@
              <div class="social-container">
                  <b class="footer-offer">приєднуйтесь</b>
                  <ul class="footer-soclink">
-                     <li class="social-network">
+                     <li class="social-network-footer">
                          <a class="social-link" href="" aria-label="Instagram">
                              <svg class="footer-social-link" width="20" height="20">
                                  <use href="./images/icons.svg#icon-instagram"></use>
                              </svg>
                          </a>
                      </li>
-                     <li class="social-network">
+                     <li class="social-network-footer">
                          <a href="" aria-label="Twitter" class="social-link">
                              <svg class="footer-social-link" width="20" height="20">
                                  <use href="./images/icons.svg#icon-twitter"></use>
                              </svg>
                          </a>
                      </li>
-                     <li class="social-network">
+                     <li class="social-network-footer">
                          <a href="" aria-label="Facebook" class="social-link">
                              <svg class="footer-social-link" width="20" height="20">
                                  <use href="./images/icons.svg#icon-facebook"></use>
                              </svg>
                          </a>
                      </li>
-                     <li class="social-network">
-                         <a href="" aria-label="LinkedIn" class="social-link-last">
+                     <li class="social-network-footer">
+                         <a href="" aria-label="LinkedIn" class="social-link">
                              <svg class="footer-social-link" width="20" height="20">
                                  <use href="./images/icons.svg#icon-linkedin2"></use>
                              </svg>
