--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                  <h2 class="services-text-title">Постійні клієнти</h2>
                  <ul class="client-list">
                      <li class="social-network-client">
-                         <a href="" class="client-link" aria-label="Клієнт-1">
+                         <a class="client-link" href=""  aria-label="Клієнт-1">
                              <svg class="icon-client">
                                  <use href="./images/icons.svg#icon-client1"></use>
                              </svg>
